--- a/package.json
+++ b/package.json
@@ -4,24 +4,22 @@
   "private": true,
   "homepage": "/rekreace",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.0.3",
-    "@types/node": "^18.7.23",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@types/jest": "^29.5.13",
+    "@types/node": "^22.7.6",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
-    "style-it": "^2.1.4",
     "styled-components": "^6.1.13",
-    "typescript": "^4.8.4",
-    "web-vitals": "^2.1.3"
+    "typescript": "^5.6.3",
+    "web-vitals": "^4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,7 +43,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.11",
     "prettier-plugin-organize-imports": "^4.1.0",
-    "sass": "^1.56.1"
+    "sass": "^1.80.2"
   }
 }
