--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@types/jest": "^29.5.13",
-    "@types/node": "^22.7.6",
-    "@types/react": "^18.3.11",
+    "@tanstack/react-query": "^5.59.19",
+    "@tanstack/react-query-devtools": "^5.59.19",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.9.0",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "axios": "^1.7.7",
     "react": "^18.3.1",
@@ -19,7 +21,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
     "typescript": "^5.6.3",
-    "web-vitals": "^4.2.3"
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,8 +45,8 @@
     ]
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.59.7",
     "@types/react-helmet": "^6.1.11",
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "sass": "^1.80.2"
+    "prettier-plugin-organize-imports": "^4.1.0"
   }
 }
