--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.53.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
@@ -32,8 +33,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@tanstack/eslint-plugin-query": "^5.59.7",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react-swc": "^3.7.1",
     "eslint": "^9.15.0",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -41,8 +44,6 @@
     "globals": "^15.12.0",
     "typescript": "~5.6.3",
     "typescript-eslint": "^8.15.0",
-    "vite": "^5.4.11",
-    "@tanstack/eslint-plugin-query": "^5.59.7",
-    "@types/react-helmet": "^6.1.11"
+    "vite": "^5.4.11"
   }
 }
