--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,17 @@
 {
-  "routes": [
-    { "src": "/rekreace/apartmany", "dest": "/" },
-    { "src": "/rekreace/objednavka", "dest": "/" },
-    { "src": "/rekreace/ceny", "dest": "/" },
-    { "src": "/rekreace/kontakt", "dest": "/" },
-    { "src": "/rekreace/frymburk", "dest": "/" },
-    { "src": "/rekreace/meteostanice", "dest": "/" },
-    { "src": "/rekreace/forum", "dest": "/" },
-    { "src": "/rekreace/fotogalerie", "dest": "/" },
-    { "src": "/rekreace/meteoalarm", "dest": "/" },
-    { "src": "/rekreace/kaliste", "dest": "/" },
-    { "src": "/rekreace/windsurfing", "dest": "/" },
-    { "src": "/rekreace/bedrich", "dest": "/" }
-  ],
   "rewrites": [
+    { "source": "/rekreace/apartmany/(.*)", "destination": "/" },
+    { "source": "/rekreace/objednavka/(.*)", "destination": "/" },
+    { "source": "/rekreace/ceny/(.*)", "destination": "/" },
+    { "source": "/rekreace/kontakt/(.*)", "destination": "/" },
+    { "source": "/rekreace/frymburk/(.*)", "destination": "/" },
+    { "source": "/rekreace/meteostanice/(.*)", "destination": "/" },
+    { "source": "/rekreace/forum/(.*)", "destination": "/" },
+    { "source": "/rekreace/fotogalerie/(.*)", "destination": "/" },
+    { "source": "/rekreace/meteoalarm/(.*)", "destination": "/" },
+    { "source": "/rekreace/kaliste/(.*)", "destination": "/" },
+    { "source": "/rekreace/windsurfing/(.*)", "destination": "/" },
+    { "source": "/rekreace/bedrich/(.*)", "destination": "/" },
     {
       "source": "/api/(.*)",
       "destination": "https://www.frymburk.com/api/$1"
