feat(vercel): test

--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,17 @@
 {
   "rewrites": [
-    { "source": "/rekreace/apartmany/(.*)", "destination": "/rekreace/" },
-    { "source": "/rekreace/objednavka/(.*)", "destination": "/rekreace/" },
-    { "source": "/rekreace/ceny/(.*)", "destination": "/rekreace/" },
-    { "source": "/rekreace/kontakt/(.*)", "destination": "/rekreace/" },
-    { "source": "/rekreace/frymburk/(.*)", "destination": "/rekreace/" },
-    { "source": "/rekreace/meteostanice/(.*)", "destination": "/rekreace/" },
-    { "source": "/rekreace/forum/(.*)", "destination": "/rekreace/" },
-    { "source": "/rekreace/fotogalerie/(.*)", "destination": "/rekreace/" },
-    { "source": "/rekreace/meteoalarm/(.*)", "destination": "/rekreace/" },
-    { "source": "/rekreace/kaliste/(.*)", "destination": "/rekreace/" },
-    { "source": "/rekreace/windsurfing/(.*)", "destination": "/rekreace/" },
-    { "source": "/rekreace/bedrich/(.*)", "destination": "/rekreace/" },
+    { "source": "/rekreace/apartmany", "destination": "/rekreace/" },
+    { "source": "/rekreace/objednavka", "destination": "/rekreace/" },
+    { "source": "/rekreace/ceny", "destination": "/rekreace/" },
+    { "source": "/rekreace/kontakt", "destination": "/rekreace/" },
+    { "source": "/rekreace/frymburk", "destination": "/rekreace/" },
+    { "source": "/rekreace/meteostanice", "destination": "/rekreace/" },
+    { "source": "/rekreace/forum", "destination": "/rekreace/" },
+    { "source": "/rekreace/fotogalerie", "destination": "/rekreace/" },
+    { "source": "/rekreace/meteoalarm", "destination": "/rekreace/" },
+    { "source": "/rekreace/kaliste", "destination": "/rekreace/" },
+    { "source": "/rekreace/windsurfing", "destination": "/rekreace/" },
+    { "source": "/rekreace/bedrich", "destination": "/rekreace/" },
     {
       "source": "/api/(.*)",
       "destination": "https://www.frymburk.com/api/$1"
