--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,5 @@
 {
   "rewrites": [
-    { "source": "/rekreace/apartmany", "destination": "/rekreace/" },
-    { "source": "/rekreace/objednavka", "destination": "/rekreace/" },
-    { "source": "/rekreace/ceny", "destination": "/rekreace/" },
-    { "source": "/rekreace/kontakt", "destination": "/rekreace/" },
-    { "source": "/rekreace/frymburk", "destination": "/rekreace/" },
-    { "source": "/rekreace/meteostanice", "destination": "/rekreace/" },
-    { "source": "/rekreace/forum", "destination": "/rekreace/" },
-    { "source": "/rekreace/fotogalerie", "destination": "/rekreace/" },
-    { "source": "/rekreace/meteoalarm", "destination": "/rekreace/" },
-    { "source": "/rekreace/kaliste", "destination": "/rekreace/" },
-    { "source": "/rekreace/windsurfing", "destination": "/rekreace/" },
-    { "source": "/rekreace/bedrich", "destination": "/rekreace/" },
     {
       "source": "/api/(.*)",
       "destination": "https://www.frymburk.com/api/$1"
@@ -39,6 +27,7 @@
     {
       "source": "/rekreace/get_ip_kamera.php",
       "destination": "https://www.frymburk.com/rekreace/get_ip_kamera.php"
-    }
+    },
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
