--- a/vercel.json
+++ b/vercel.json
@@ -28,6 +28,6 @@
       "source": "/rekreace/get_ip_kamera.php",
       "destination": "https://www.frymburk.com/rekreace/get_ip_kamera.php"
     },
-    { "source": "/", "destination": "https://olca.cz/rekreace/" }
+    { "source": "/rekreace/(.*)", "destination": "/rekreace/" }
   ]
 }
