--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@storybook/react-vite": "^8.5.0",
+    "@storybook/react-vite": "^8.5.1",
     "@tanstack/react-query": "^5.64.2",
     "@tanstack/react-query-devtools": "^5.64.2",
-    "@types/node": "^22.10.7",
+    "@types/node": "^22.10.10",
     "axios": "^1.7.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -31,38 +31,42 @@
     "web-vitals": "^4.2.4"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "3.2.4",
-    "@eslint/js": "^9.18.0",
-    "@storybook/addon-essentials": "8.5.0",
-    "@storybook/addon-interactions": "8.5.0",
-    "@storybook/addon-onboarding": "8.5.0",
-    "@storybook/blocks": "8.5.0",
-    "@storybook/preset-create-react-app": "8.5.0",
-    "@storybook/react": "8.5.0",
-    "@storybook/react-webpack5": "8.5.0",
-    "@storybook/test": "8.5.0",
+    "@chromatic-com/storybook": "^3.2.4",
+    "@eslint/js": "^9.19.0",
+    "@storybook/addon-essentials": "8.5.1",
+    "@storybook/addon-interactions": "8.5.1",
+    "@storybook/addon-onboarding": "8.5.1",
+    "@storybook/blocks": "8.5.1",
+    "@storybook/preset-create-react-app": "8.5.1",
+    "@storybook/react": "8.5.1",
+    "@storybook/react-webpack5": "8.5.1",
+    "@storybook/test": "8.5.1",
+    "@tailwindcss/postcss": "^4.0.0",
     "@tanstack/eslint-plugin-query": "^5.64.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
-    "@types/react": "^19.0.7",
+    "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.18.0",
+    "eslint": "^9.19.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.18",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-storybook": "^0.11.2",
     "globals": "^15.14.0",
     "jsdom": "^26.0.0",
     "msw": "^2.7.0",
     "postcss": "^8.5.1",
     "prop-types": "15.8.1",
-    "storybook": "8.5.0",
-    "tailwindcss": "^3.4.17",
+    "storybook": "8.5.1",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.21.0",
     "vite": "^6.0.11",
-    "vitest": "^3.0.3",
+    "vitest": "^3.0.4",
     "webpack": "5.97.1"
   },
   "eslintConfig": {
