feat(base-url): change base url and update all imports

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,9 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl": "./",
-    "paths": {
-      "src/*": ["src/*"]
-    },
+    "baseUrl": "src",
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
     "useDefineForClassFields": true,
@@ -21,7 +18,7 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": false, // temporary
+    "noUnusedLocals": false,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
