--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
-    "react-scripts": "5.0.1",
     "styled-components": "^6.1.15",
     "web-vitals": "^4.2.4"
   },
@@ -39,34 +38,32 @@
     "@storybook/blocks": "8.5.3",
     "@storybook/preset-create-react-app": "8.5.3",
     "@storybook/react": "8.5.3",
-    "@storybook/react-webpack5": "8.5.3",
     "@storybook/test": "8.5.3",
-    "@tailwindcss/postcss": "^4.0.4",
+    "@tailwindcss/postcss": "^4.0.5",
     "@tanstack/eslint-plugin-query": "^5.66.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react-swc": "^3.7.2",
+    "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.20.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
+    "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-storybook": "^0.11.2",
     "globals": "^15.14.0",
     "jsdom": "^26.0.0",
     "msw": "^2.7.0",
     "postcss": "^8.5.1",
-    "prop-types": "15.8.1",
     "storybook": "8.5.3",
-    "tailwindcss": "^4.0.4",
+    "tailwindcss": "^4.0.5",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.23.0",
     "vite": "^6.1.0",
-    "vitest": "^3.0.5",
-    "webpack": "5.97.1"
+    "vitest": "^3.0.5"
   },
   "eslintConfig": {
     "extends": [
