feat(Meteo): replace useContext + useReducer with Zustand

--- a/package.json
+++ b/package.json
@@ -17,54 +17,56 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@storybook/preview-api": "^8.5.3",
-    "@storybook/react-vite": "^8.5.3",
-    "@tanstack/react-query": "^5.66.0",
-    "@tanstack/react-query-devtools": "^5.66.0",
-    "@types/node": "^22.13.1",
-    "axios": "^1.7.9",
+    "@storybook/preview-api": "^8.6.0",
+    "@storybook/react-vite": "^8.6.0",
+    "@tanstack/react-query": "^5.66.9",
+    "@tanstack/react-query-devtools": "^5.66.9",
+    "@types/node": "^22.13.5",
+    "axios": "^1.8.1",
+    "immer": "^10.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-router-dom": "^7.1.5",
+    "react-router-dom": "^7.2.0",
     "styled-components": "^6.1.15",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.4",
-    "@eslint/js": "^9.20.0",
-    "@storybook/addon-essentials": "8.5.3",
-    "@storybook/addon-interactions": "8.5.3",
-    "@storybook/addon-onboarding": "8.5.3",
-    "@storybook/blocks": "8.5.3",
-    "@storybook/preset-create-react-app": "8.5.3",
-    "@storybook/react": "8.5.3",
-    "@storybook/test": "8.5.3",
-    "@tailwindcss/postcss": "^4.0.5",
-    "@tanstack/eslint-plugin-query": "^5.66.0",
+    "@eslint/js": "^9.21.0",
+    "@storybook/addon-essentials": "8.6.0",
+    "@storybook/addon-interactions": "8.6.0",
+    "@storybook/addon-onboarding": "8.6.0",
+    "@storybook/blocks": "8.6.0",
+    "@storybook/preset-create-react-app": "8.6.0",
+    "@storybook/react": "8.6.0",
+    "@storybook/test": "8.6.0",
+    "@tailwindcss/postcss": "^4.0.9",
+    "@tanstack/eslint-plugin-query": "^5.66.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
-    "eslint": "^9.20.0",
+    "eslint": "^9.21.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-storybook": "^0.11.2",
-    "globals": "^15.14.0",
+    "eslint-plugin-storybook": "^0.11.3",
+    "globals": "^16.0.0",
     "jsdom": "^26.0.0",
-    "msw": "^2.7.0",
-    "postcss": "^8.5.1",
-    "storybook": "8.5.3",
-    "tailwindcss": "^4.0.5",
+    "msw": "^2.7.3",
+    "postcss": "^8.5.3",
+    "storybook": "8.6.0",
+    "tailwindcss": "^4.0.9",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.23.0",
-    "vite": "^6.1.0",
-    "vitest": "^3.0.5"
+    "typescript-eslint": "^8.25.0",
+    "vite": "^6.2.0",
+    "vitest": "^3.0.7"
   },
   "eslintConfig": {
     "extends": [
