feat(Docker): add docker frontend, test jenkins pipeline, lint warnings

--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@
 # VITE_API_BASE_URL=http://localhost:80
 
 # for Docker
-VITE_API_BASE_URL=http://localhost:8080
+## VITE_API_BASE_URL=http://localhost:8080
 
 # for live
-# VITE_API_BASE_URL=https://www.frymburk.com
+VITE_API_BASE_URL=https://www.frymburk.com
