--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.3",
+    "@arcgis/core": "^4.32.7",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -25,10 +27,14 @@
     "@tanstack/react-query-devtools": "^5.67.1",
     "@types/node": "^22.13.9",
     "axios": "^1.8.1",
+    "graphql": "^16.10.0",
     "immer": "^10.1.1",
+    "leaflet": "^1.9.4",
+    "maplibre-gl": "^5.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.2.0",
     "styled-components": "^6.1.15",
     "web-vitals": "^4.2.4",
@@ -49,6 +55,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/leaflet": "^1.9.16",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
