--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@apollo/client": "^3.13.3",
-    "@arcgis/core": "^4.32.7",
+    "@apollo/client": "^3.13.4",
+    "@arcgis/core": "^4.32.8",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -23,10 +23,10 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@storybook/preview-api": "^8.6.4",
     "@storybook/react-vite": "^8.6.4",
-    "@tanstack/react-query": "^5.67.1",
-    "@tanstack/react-query-devtools": "^5.67.1",
-    "@types/node": "^22.13.9",
-    "axios": "^1.8.1",
+    "@tanstack/react-query": "^5.67.3",
+    "@tanstack/react-query-devtools": "^5.67.3",
+    "@types/node": "^22.13.10",
+    "axios": "^1.8.3",
     "graphql": "^16.10.0",
     "immer": "^10.1.1",
     "leaflet": "^1.9.4",
@@ -35,14 +35,14 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.2.0",
+    "react-router-dom": "^7.3.0",
     "styled-components": "^6.1.15",
     "web-vitals": "^4.2.4",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.5",
-    "@eslint/js": "^9.21.0",
+    "@eslint/js": "^9.22.0",
     "@storybook/addon-essentials": "8.6.4",
     "@storybook/addon-interactions": "8.6.4",
     "@storybook/addon-onboarding": "8.6.4",
@@ -50,8 +50,8 @@
     "@storybook/preset-create-react-app": "8.6.4",
     "@storybook/react": "8.6.4",
     "@storybook/test": "8.6.4",
-    "@tailwindcss/postcss": "^4.0.10",
-    "@tanstack/eslint-plugin-query": "^5.66.1",
+    "@tailwindcss/postcss": "^4.0.13",
+    "@tanstack/eslint-plugin-query": "^5.67.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
@@ -59,7 +59,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
-    "eslint": "^9.21.0",
+    "eslint": "^9.22.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -70,12 +70,13 @@
     "jsdom": "^26.0.0",
     "msw": "^2.7.3",
     "postcss": "^8.5.3",
+    "rollup-plugin-visualizer": "^5.14.0",
     "storybook": "8.6.4",
-    "tailwindcss": "^4.0.10",
+    "tailwindcss": "^4.0.13",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.0",
-    "vite": "^6.2.0",
-    "vitest": "^3.0.7"
+    "typescript-eslint": "^8.26.1",
+    "vite": "^6.2.1",
+    "vitest": "^3.0.8"
   },
   "eslintConfig": {
     "extends": [
