--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.4",
-    "@arcgis/core": "^4.32.8",
+    "@arcgis/core": "^4.32.9",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@tanstack/react-query": "^5.67.3",
-    "axios": "^1.8.3",
+    "@sentry/react": "^9.6.1",
+    "@sentry/vite-plugin": "^3.2.2",
+    "@tanstack/react-query": "^5.69.0",
+    "axios": "^1.8.4",
     "graphql": "^16.10.0",
     "immer": "^10.1.1",
     "leaflet": "^1.9.4",
@@ -31,52 +33,52 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.3.0",
-    "styled-components": "^6.1.15",
+    "react-router-dom": "^7.4.0",
+    "styled-components": "^6.1.16",
     "web-vitals": "^4.2.4",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.5",
+    "@chromatic-com/storybook": "^3.2.6",
     "@eslint/js": "^9.22.0",
-    "@storybook/addon-essentials": "8.6.4",
-    "@storybook/addon-interactions": "8.6.4",
-    "@storybook/addon-onboarding": "8.6.4",
-    "@storybook/blocks": "8.6.4",
-    "@storybook/preset-create-react-app": "8.6.4",
-    "@storybook/preview-api": "^8.6.4",
-    "@storybook/react": "8.6.4",
-    "@storybook/react-vite": "^8.6.4",
-    "@storybook/test": "8.6.4",
+    "@storybook/addon-essentials": "8.6.7",
+    "@storybook/addon-interactions": "8.6.7",
+    "@storybook/addon-onboarding": "8.6.7",
+    "@storybook/blocks": "8.6.7",
+    "@storybook/preset-create-react-app": "8.6.7",
+    "@storybook/preview-api": "^8.6.7",
+    "@storybook/react": "8.6.7",
+    "@storybook/react-vite": "^8.6.7",
+    "@storybook/test": "8.6.7",
     "@tailwindcss/postcss": "^4.0.14",
-    "@tanstack/eslint-plugin-query": "^5.67.2",
-    "@tanstack/react-query-devtools": "^5.67.3",
+    "@tanstack/eslint-plugin-query": "^5.68.0",
+    "@tanstack/react-query-devtools": "^5.69.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/leaflet": "^1.9.16",
     "@types/node": "^22.13.10",
-    "@types/react": "^19.0.10",
+    "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react-swc": "^3.8.0",
+    "@vitejs/plugin-react-swc": "^3.8.1",
     "eslint": "^9.22.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-storybook": "^0.11.4",
+    "eslint-plugin-storybook": "^0.11.6",
     "globals": "^16.0.0",
     "jsdom": "^26.0.0",
     "msw": "^2.7.3",
     "postcss": "^8.5.3",
     "rollup-plugin-visualizer": "^5.14.0",
-    "storybook": "8.6.4",
+    "storybook": "8.6.7",
     "tailwindcss": "^4.0.14",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.1",
-    "vite": "^6.2.1",
-    "vitest": "^3.0.8"
+    "vite": "^6.2.2",
+    "vitest": "^3.0.9"
   },
   "eslintConfig": {
     "extends": [
