--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@sentry/react": "^9.10.1",
     "@sentry/vite-plugin": "^3.2.4",
     "@tanstack/react-query": "^5.71.0",
+    "@tanstack/react-table": "^8.21.2",
     "axios": "^1.8.4",
     "graphql": "^16.10.0",
     "immer": "^10.1.1",
