--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-pdf/renderer": "^4.3.0",
     "@sentry/react": "^9.11.0",
     "@sentry/vite-plugin": "^3.3.1",
     "@tanstack/react-query": "^5.71.10",
