--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@tanstack/react-query": "^5.71.10",
     "@tanstack/react-table": "^8.21.2",
     "axios": "^1.8.4",
+    "buffer": "^6.0.3",
     "graphql": "^16.10.0",
     "immer": "^10.1.1",
     "leaflet": "^1.9.4",
     "maplibre-gl": "^5.3.0",
+    "process": "^0.11.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
@@ -43,6 +45,8 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@eslint/js": "^9.24.0",
     "@storybook/addon-essentials": "8.6.12",
     "@storybook/addon-interactions": "8.6.12",
