--- a/package.json
+++ b/package.json
@@ -15,30 +15,31 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@apollo/client": "^3.13.6",
-    "@arcgis/core": "^4.32.9",
+    "@apollo/client": "^3.13.8",
+    "@arcgis/core": "^4.32.10",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-pdf/renderer": "^4.3.0",
-    "@sentry/react": "^9.11.0",
+    "@sentry/react": "^9.14.0",
     "@sentry/vite-plugin": "^3.3.1",
-    "@tanstack/react-query": "^5.71.10",
-    "@tanstack/react-table": "^8.21.2",
+    "@tanstack/react-query": "^5.74.4",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.8.4",
     "buffer": "^6.0.3",
     "graphql": "^16.10.0",
     "immer": "^10.1.1",
     "leaflet": "^1.9.4",
-    "maplibre-gl": "^5.3.0",
+    "maplibre-gl": "^5.4.0",
     "process": "^0.11.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.55.0",
+    "react-hook-form": "^7.56.1",
     "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.5.0",
+    "react-router-dom": "^7.5.1",
+    "rxjs": "^7.8.2",
     "styled-components": "^6.1.17",
     "web-vitals": "^4.2.4",
     "zustand": "^5.0.3"
@@ -47,7 +48,7 @@
     "@chromatic-com/storybook": "^3.2.6",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
-    "@eslint/js": "^9.24.0",
+    "@eslint/js": "^9.25.1",
     "@storybook/addon-essentials": "8.6.12",
     "@storybook/addon-interactions": "8.6.12",
     "@storybook/addon-onboarding": "8.6.12",
@@ -57,35 +58,35 @@
     "@storybook/react": "8.6.12",
     "@storybook/react-vite": "^8.6.12",
     "@storybook/test": "8.6.12",
-    "@tailwindcss/postcss": "^4.1.3",
-    "@tanstack/eslint-plugin-query": "^5.71.5",
-    "@tanstack/react-query-devtools": "^5.71.10",
+    "@tailwindcss/postcss": "^4.1.4",
+    "@tanstack/eslint-plugin-query": "^5.73.3",
+    "@tanstack/react-query-devtools": "^5.74.6",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/leaflet": "^1.9.17",
-    "@types/node": "^22.14.0",
-    "@types/react": "^19.1.0",
-    "@types/react-dom": "^19.1.1",
-    "@vitejs/plugin-react-swc": "^3.8.1",
-    "eslint": "^9.24.0",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react-swc": "^3.9.0",
+    "eslint": "^9.25.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-storybook": "^0.12.0",
     "globals": "^16.0.0",
-    "jsdom": "^26.0.0",
-    "msw": "^2.7.3",
+    "jsdom": "^26.1.0",
+    "msw": "^2.7.5",
     "postcss": "^8.5.3",
     "rollup-plugin-visualizer": "^5.14.0",
     "storybook": "8.6.12",
-    "tailwindcss": "^4.1.3",
+    "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.29.0",
-    "vite": "^6.2.5",
-    "vitest": "^3.1.1"
+    "typescript-eslint": "^8.31.0",
+    "vite": "^6.3.2",
+    "vitest": "^3.1.2"
   },
   "eslintConfig": {
     "extends": [
