--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@hookform/resolvers": "^5.0.1",
     "@react-pdf/renderer": "^4.3.0",
-    "@sentry/react": "^9.14.0",
+    "@sentry/react": "^9.15.0",
     "@sentry/vite-plugin": "^3.3.1",
-    "@tanstack/react-query": "^5.74.4",
+    "@tanstack/react-query": "^5.74.11",
     "@tanstack/react-table": "^8.21.3",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "buffer": "^6.0.3",
-    "graphql": "^16.10.0",
+    "graphql": "^16.11.0",
     "immer": "^10.1.1",
     "leaflet": "^1.9.4",
     "maplibre-gl": "^5.4.0",
@@ -38,10 +39,11 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.1",
     "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.5.1",
+    "react-router-dom": "^7.5.3",
     "rxjs": "^7.8.2",
     "styled-components": "^6.1.17",
     "web-vitals": "^4.2.4",
+    "zod": "^3.24.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -58,16 +60,16 @@
     "@storybook/react": "8.6.12",
     "@storybook/react-vite": "^8.6.12",
     "@storybook/test": "8.6.12",
-    "@tailwindcss/postcss": "^4.1.4",
-    "@tanstack/eslint-plugin-query": "^5.73.3",
-    "@tanstack/react-query-devtools": "^5.74.6",
+    "@tailwindcss/postcss": "^4.1.5",
+    "@tanstack/eslint-plugin-query": "^5.74.7",
+    "@tanstack/react-query-devtools": "^5.74.11",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/leaflet": "^1.9.17",
-    "@types/node": "^22.14.1",
+    "@types/node": "^22.15.3",
     "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@types/react-dom": "^19.1.3",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "eslint": "^9.25.1",
     "eslint-plugin-import": "^2.31.0",
@@ -82,10 +84,10 @@
     "postcss": "^8.5.3",
     "rollup-plugin-visualizer": "^5.14.0",
     "storybook": "8.6.12",
-    "tailwindcss": "^4.1.4",
+    "tailwindcss": "^4.1.5",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.31.0",
-    "vite": "^6.3.2",
+    "typescript-eslint": "^8.31.1",
+    "vite": "^6.3.4",
     "vitest": "^3.1.2"
   },
   "eslintConfig": {
