--- a/package.json
+++ b/package.json
@@ -15,80 +15,75 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@apollo/client": "^3.13.8",
-    "@arcgis/core": "^4.33.8",
+    "@apollo/client": "^3.13.9",
+    "@arcgis/core": "^4.33.12",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@hookform/resolvers": "^5.1.1",
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@fortawesome/react-fontawesome": "^0.2.3",
+    "@hookform/resolvers": "^5.2.1",
     "@react-pdf/renderer": "^4.3.0",
-    "@sentry/react": "^9.35.0",
-    "@sentry/vite-plugin": "^3.5.0",
-    "@tanstack/react-query": "^5.81.5",
+    "@sentry/react": "^10.0.0",
+    "@sentry/vite-plugin": "^4.0.2",
+    "@tanstack/react-query": "^5.84.1",
     "@tanstack/react-table": "^8.21.3",
-    "axios": "^1.10.0",
+    "axios": "^1.11.0",
     "buffer": "^6.0.3",
     "graphql": "^16.11.0",
     "immer": "^10.1.1",
     "leaflet": "^1.9.4",
     "maplibre-gl": "^5.6.1",
     "process": "^0.11.10",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.60.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
     "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.6.3",
+    "react-router-dom": "^7.7.1",
     "rxjs": "^7.8.2",
     "styled-components": "^6.1.19",
-    "web-vitals": "^5.0.3",
-    "zod": "^3.25.74",
-    "zustand": "^5.0.6"
+    "web-vitals": "^5.1.0",
+    "zod": "^4.0.14",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^4.0.1",
+    "@chromatic-com/storybook": "^4.1.0",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
-    "@eslint/js": "^9.30.1",
-    "@storybook/addon-essentials": "8.6.14",
-    "@storybook/addon-interactions": "8.6.14",
-    "@storybook/addon-onboarding": "9.0.15",
-    "@storybook/blocks": "8.6.14",
-    "@storybook/preset-create-react-app": "9.0.15",
-    "@storybook/preview-api": "^8.6.14",
-    "@storybook/react": "9.0.15",
-    "@storybook/react-vite": "^9.0.15",
-    "@storybook/test": "8.6.14",
+    "@eslint/js": "^9.32.0",
+    "@storybook/addon-onboarding": "9.1.0",
+    "@storybook/preset-create-react-app": "9.1.0",
+    "@storybook/react-vite": "^9.1.0",
     "@tailwindcss/postcss": "^4.1.11",
-    "@tanstack/eslint-plugin-query": "^5.81.2",
-    "@tanstack/react-query-devtools": "^5.81.5",
-    "@testing-library/jest-dom": "^6.6.3",
+    "@tanstack/eslint-plugin-query": "^5.83.1",
+    "@tanstack/react-query-devtools": "^5.84.1",
+    "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/leaflet": "^1.9.19",
-    "@types/node": "^24.0.10",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react-swc": "^3.10.2",
-    "eslint": "^9.30.1",
+    "@types/leaflet": "^1.9.20",
+    "@types/node": "^24.1.0",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react-swc": "^3.11.0",
+    "eslint": "^9.32.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-storybook": "^9.0.15",
+    "eslint-plugin-storybook": "^9.1.0",
     "globals": "^16.3.0",
     "jsdom": "^26.1.0",
-    "msw": "^2.10.3",
+    "msw": "^2.10.4",
     "postcss": "^8.5.6",
     "rollup-plugin-visualizer": "^6.0.3",
-    "storybook": "9.0.15",
+    "storybook": "9.1.0",
     "tailwindcss": "^4.1.11",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.35.1",
-    "vite": "^7.0.2",
-    "vitest": "^3.2.4"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.38.0",
+    "vite": "^7.0.6",
+    "vitest": "^3.2.4",
+    "@storybook/addon-docs": "9.1.0"
   },
   "eslintConfig": {
     "extends": [
